[package]
name = "kurara_subql_warmup"
version = "0.1.0"
authors = ["Kevin Lu <kevlu93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = {version = "0.10.0", features = ["reqwest-blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
log = "0.4.3"
env_logger = "0.5.10"
futures = "0.3"
termion = "1.5.6"
tui = "0.16.0"
chrono = "0.2.16"